Sửa tên setting menu hamburger, fix code gap css, move code sang theme css

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -988,40 +988,31 @@ a.hover-heading-color:hover,
   gap: 0.6rem;
 }
 :where(.gap-8) {
-  --gap: 0.8rem;
-  --gap-desktop: 0.8rem;
-  gap: var(--gap);
+  gap: 0.8rem;
 }
 :where(.gap-10) {
-  --gap: 1rem;
-  --gap-desktop: 1rem;
-  gap: var(--gap);
+  gap: 1rem;
 }
 :where(.gap-15) {
   gap: 1.5rem;
 }
 :where(.gap-20) {
-  --gap: 2rem;
-  gap: var(--gap);
+  gap: 2rem;
 }
 :where(.gap-25) {
-  --gap: 2.5rem;
-  gap: var(--gap);
+  gap: 2.5rem;
 }
 :where(.gap-30) {
-  --gap: 3rem;
-  gap: var(--gap);
+  gap: 3rem;
 }
 :where(.gap-32) {
-  --gap: 3.2rem;
-  gap: var(--gap);
+  gap: 3.2rem;
 }
 :where(.gap-40) {
   gap: 4rem;
 }
 :where(.gap-60) {
-  --gap: 6rem;
-  gap: var(--gap);
+  gap: 6rem;
 }
 .row-gap {
   row-gap: var(--gap, 0);
@@ -1777,8 +1768,8 @@ quantity-input input {
   .mb-md-40 {
     margin-bottom: 4rem;
   }
-  .mb-md-50 {
-    margin-bottom: 5rem;
+  .mb-md-52 {
+    margin-bottom: 5.2rem;
   }
   .p-md-20 {
     padding: 2rem;
@@ -1804,21 +1795,11 @@ quantity-input input {
   .gap-md-20 {
     gap: 2rem;
   }
-  :where(.gap-md-30) {
-    --gap: 3rem;
-    gap: var(--gap);
-  }
   :where(.gap-md-32) {
-    --gap: 3.2rem;
-    gap: var(--gap);
-  }
-  :where(.gap-md-50) {
-    --gap: 5rem;
-    gap: var(--gap);
+    gap: 3.2rem;
   }
   :where(.gap-md-52) {
-    --gap: 5.2rem;
-    gap: var(--gap);
+    gap: 5.2rem;
   }
   .column-md {
     flex-direction: column;
@@ -2198,20 +2179,6 @@ menu-drawer .modal-inner {
     padding: var(--padding-block-desktop, 3rem)
       var(--padding-inline-desktop, 4rem);
   }
-}
-.drawer-right .header__menu-mobile .submenu {
-  transform: translateX(10px);
-  opacity: 0;
-  transition: all var(--duration-short);
-}
-.drawer-left .header__menu-mobile .submenu {
-  transform: translateX(-10px);
-  opacity: 0;
-  transition: all var(--duration-short);
-}
-.header__menu-mobile .submenu[open] {
-  transform: translateX(0px);
-  opacity: 1;
 }
 .load-more-progress-bar::after {
   content: "";
