--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2141,3 +2141,17 @@ video-lightbox-item .play-button svg {
 cart-drawer {
   display: block;
 }
+.drawer-right .header__menu-mobile .submenu {
+  transform: translateX(10px);
+  opacity: 0;
+  transition: all var(--duration-short);
+}
+.drawer-left .header__menu-mobile .submenu {
+  transform: translateX(-10px);
+  opacity: 0;
+  transition: all var(--duration-short);
+}
+.header__menu-mobile .submenu[open] {
+  transform: translateX(0px);
+  opacity: 1;
+}
